# gendiff

./: Makefile  pyproject.toml  pytest.ini  setup.cfg  test.py
gendiff/: main.py
gendiff/scripts/: gendiff_start.py
gendiff/styles/: stylish_file.py
tests/: test_main.py
tests/fixtures/: file1.csv  file1.json  file2.csv  file2.json  file3.json  file4.json
